--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Whether to open mock
-VITE_USE_MOCK = true
+VITE_USE_MOCK = false
 
 # public path
 VITE_PUBLIC_PATH = /
@@ -8,12 +8,13 @@ VITE_PUBLIC_PATH = /
 # Please note that no line breaks
 VITE_PROXY = [["/basic-api","http://localhost:3000"],["/upload","http://localhost:3300/upload"]]
 # VITE_PROXY=[["/api","https://vvbin.cn/test"]]
-
+# https://www.fastmock.site/mock/23a93d9800a894dc5f7bff1d4412b2b8/api
 # Delete console
 VITE_DROP_CONSOLE = false
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/basic-api
+# VITE_GLOB_API_URL=/basic-api
+VITE_GLOB_API_URL=https://www.fastmock.site/mock/23a93d9800a894dc5f7bff1d4412b2b8/api
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
