--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "vben-admin",
+  "name": "bingo-cloud-plate",
   "version": "2.8.0",
   "author": {
-    "name": "vben",
-    "email": "anncwb@126.com",
-    "url": "https://github.com/anncwb"
+    "name": "bingo",
+    "email": "lalala@126.com"
   },
   "scripts": {
     "bootstrap": "yarn install",
@@ -43,6 +42,7 @@
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
     "echarts": "^5.2.2",
+    "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
@@ -109,7 +109,7 @@
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.5.2",
-    "stylelint": "^14.0.1",
+    "stylelint": "^13.13.1",
     "stylelint-config-html": "^1.0.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^23.0.0",
