--- a/package.json
+++ b/package.json
@@ -117,6 +117,8 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
+    "unplugin-auto-import": "^0.7.0",
+    "unplugin-vue-components": "^0.19.2",
     "vite": "^2.6.13",
     "vite-plugin-compression": "^0.3.5",
     "vite-plugin-html": "^2.1.1",
