--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.0",
     "echarts": "^5.2.2",
+    "element-plus": "^2.1.10",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
